--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
     port: 8500  # Port on which the application will run
 
 spring:
+  ai:
+    endpoint: https://api.openai.com/v1/chat/completions  # OpenAI API endpoint
+    api-key: ${OPENAI_API_KEY}  # OpenAI API key
   mvc:
     view:
         prefix: WEB-INF/views/
